Realizando as tarefas das issues #1 #2 #3

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Anderson Evangelista dos Santos">
     <meta name="description" content="Primeira atividade do curso de Desenvolvimento Web Fevereiro/2019">
+    <link rel="stylesheet" href="me.css">
     <title>Anderson Evangelista dos Santos</title>
 </head>
 <body>
-    <header>
+    <header class="intro">
         <h1>Olá turma, meu nome é Anderson Evangelista </h1>
         <!-- alt é para adicionar a descrição da imagem quando esta não aparecer (atalho para comentar
             no VS Code é ctrl+:) -->
@@ -24,7 +25,8 @@
         <ul>
             <li>Telefone: +55(71) 9 8869-7277</li>
             <li>Email: andersonevangelista1@gmail.com</li>
-            <li>Rede social: <a target="_blank" href="https://www.instagram.com/anderson.evangelista.37/">Clique aqui</a> </li>
+            <li>Instagram: <a target="_blank" href="https://www.instagram.com/anderson.evangelista.37/">Clique aqui</a> </li>
+            <li>Facebook: <a class="link-laranja" target="_blank" href="https://www.facebook.com/anderson.evangelista.37">Clique aqui</a> </li>
             <li>Skype: anderson_taurus</li>
         </ul>
     </header>
