Realização da tarefa da #4

--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
             no VS Code é ctrl+:) -->
         <img src="perfil_anderson.jpg" alt="Foto Anderson">
         <p>
-            Sou Engenheiro de Controle e Automação, sou empreendedor na área de Tecnologia da Informação. 
+            Sou Engenheiro de Controle e Automação, empreendedor na área de Tecnologia da Informação. 
             Atuo na implementação de estruturas de redes, telefonia e segurança eletrônica. 
             Atualmente busco informações suficiente para desenvolver aplicações e equipamentos para área de 
             Automação Residencial
         </p>
         <h3>Contato:</h3>
-        <ul>
+        <ul class="lista-linha">
             <li>Telefone: +55(71) 9 8869-7277</li>
+            <li>|</li>
             <li>Email: andersonevangelista1@gmail.com</li>
+            <li>|</li>
             <li>Instagram: <a target="_blank" href="https://www.instagram.com/anderson.evangelista.37/">Clique aqui</a> </li>
+            <li>|</li>
             <li>Facebook: <a class="link-laranja" target="_blank" href="https://www.facebook.com/anderson.evangelista.37">Clique aqui</a> </li>
+            <li>|</li>
             <li>Skype: anderson_taurus</li>
         </ul>
     </header>
