--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Anderson Evangelista dos Santos">
     <meta name="description" content="Primeira atividade do curso de Desenvolvimento Web Fevereiro/2019">
     <link rel="stylesheet" href="me.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <title>Anderson Evangelista dos Santos</title>
 </head>
 <body>
@@ -21,17 +22,17 @@
             Atualmente busco informações suficiente para desenvolver aplicações e equipamentos para área de 
             Automação Residencial
         </p>
-        <h3>Contato:</h3>
+        <h3>Contatos:</h3>
         <ul class="lista-linha">
-            <li>Telefone: +55(71) 9 8869-7277</li>
+            <li><i class="fab fa-whatsapp-square"></i> +55(71) 9 8869-7277</li>
             <li>|</li>
-            <li>Email: andersonevangelista1@gmail.com</li>
+            <li><i class="far fa-envelope"></i> andersonevangelista1@gmail.com</li>
             <li>|</li>
-            <li>Instagram: <a target="_blank" href="https://www.instagram.com/anderson.evangelista.37/">Clique aqui</a> </li>
+            <li><i class="fab fa-instagram"></i> <a target="_blank" href="https://www.instagram.com/anderson.evangelista.37/">Clique aqui</a> </li>
             <li>|</li>
-            <li>Facebook: <a class="link-laranja" target="_blank" href="https://www.facebook.com/anderson.evangelista.37">Clique aqui</a> </li>
+            <li><i class="fab fa-facebook-square"></i> <a class="link-laranja" target="_blank" href="https://www.facebook.com/anderson.evangelista.37">Clique aqui</a> </li>
             <li>|</li>
-            <li>Skype: anderson_taurus</li>
+            <li><i class="fab fa-skype"></i> anderson_i9tech</li>
         </ul>
     </header>
 </body>
