Correção falha no codigo

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Anderson Evangelista dos Santos">
     <meta name="description" content="Primeira atividade do curso de Desenvolvimento Web Fevereiro/2019">
-    <link rel="stylesheet" href="me.css">ntegrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQb
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" iqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="me.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nova+Flat" rel="stylesheet">
     <title>Anderson Evangelista dos Santos</title>
 </head>
-<body>
+ <body class="body">
     <header class="intro">
         <h1>Olá turma, meu nome é Anderson Evangelista </h1>
         <!-- alt é para adicionar a descrição da imagem quando esta não aparecer (atalho para comentar
